# AI-AudioFlow

./: .env.example  .gitignore  UI改善清單.md  app.py  build.bat  build.sh  config.example.json  config.json  docker-compose.yml  index.html  pyproject.toml  recording_2026-06-14_22-12.md  recording_2026-06-14_22-12_易讀版.md  run.bat  run.sh  summary.html  summary.md  整合測試報告.md  開發計畫.md
.github/workflows/: build-windows.yml
for_windows/: .gitignore  README.md  app.py  build.bat  config.example.json  pyproject.toml  run.bat
for_windows/src/: claude_cli.py  main.py  prompts.py  stt_engine.py  worker_main.py
for_windows/src/bridge/: __init__.py  _base.py  _environment.py  _helpers.py  _processing.py  _recording.py  _services.py  _settings.py  _worker.py
for_windows/src/frontend/: index.html
llm-service/: Dockerfile  README.md  server.js
openclaw/: Dockerfile  worker.py
scripts/: gen_bundled_assets.py
src/: main.py  prompts.py  stt_lock.py  worker_main.py
src/bridge/: __init__.py  _base.py  _docker.py  _helpers.py  _platform.py  _processing.py  _recording.py  _services.py  _settings.py  _worker.py
src/frontend/: index.html
stt-worker/: .env.example  README.md  worker.py
tests/: conftest.py  test_lifecycle.py  test_platform.py  test_processing.py  test_recording.py  test_services.py  test_settings.py
