[project]
name = "ai-audioflow"
version = "0.1.0"
requires-python = ">=3.11"
description = "AI AudioFlow — 自動錄音、轉譯、摘要與分發系統"

dependencies = [
    "pywebview>=5.0",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "pydub>=0.25",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "structlog>=25.1",
    "pyaudiowpatch>=0.2; sys_platform == 'win32'",
    "pythonnet>=3.0; sys_platform == 'win32'",
    "clr_loader>=0.2; sys_platform == 'win32'",
    "PyGObject>=3.42; sys_platform == 'linux'",
]

[project.optional-dependencies]
build = [
    "nuitka[onefile]>=2.0",
    "Pillow>=11.0",
    "ordered-set>=4.0",
    "setuptools<81",
    "patchelf>=0.17; sys_platform == 'linux'",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
